# cod-auto-editor

./: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: dependabot-pr-to-jira.yml  models-healthcheck.yml
.github/workflows/scripts/: create-jira-ticket-from-dependabot.ex.cjs
cod_auto_editor/: __init__.py  analysis.py  api.py  asr.py  cli.py  db.py  dedupe.py  edit.py  gui_qt.py  hitmarker.py  intervals.py  intro.py  models.py  overlays.py  renderers.py  speech.py  utils.py
